# fpga-learning

./: .gitignore  ARTY_A7_COMPLETE_REFERENCE.md  ARTY_A7_ETHERNET_SPECS.md  BUILD_AND_PROGRAM.md  LICENSE  PORTFOLIO_SUMMARY.md  README.md  SYSTEM_ARCHITECTURE.md  build.cmd  build.tcl  itch_live_feed.py  itch_mysql_importer.py  itchdb_to_fpga.py  mylab.txt  project14_latency.csv  project9_latency.csv  sim_mac_byte_counter.vhd  simulate.tcl  start_project14.sh  start_project15.sh  start_project16.sh  start_project17.sh  system_architecture.drawio  test_xdp_disruptor.sh
01-binary-counter-with-reset/: .gitignore  README.md
01-binary-counter-with-reset/constraints/: Arty-A7-100-Master.xdc
01-binary-counter-with-reset/src/: binary_counter.vhd  binary_counter_tb.vhd
02-button-debouncer/: README.md
02-button-debouncer/constraints/: Arty-A7-100-Master.xdc
02-button-debouncer/simulation/: button_debouncer_tb_behav.wcfg
02-button-debouncer/src/: button_debouncer.vhd  button_debouncer_tb.vhd
02.5-button-debouncer/: .gitignore  README.md
02.5-button-debouncer/constraints/: Arty-A7-100-Master.xdc
02.5-button-debouncer/simulation/: button_debouncer_tb_behav.wcfg
02.5-button-debouncer/src/: button_debouncer.vhd  button_debouncer_tb.vhd
03-fifo/: README.md
04-fifo-hardware/: .gitignore  README.md
04B-fifo-hardware/: .gitignore  README.md
05-uart-transmitter/: README.md  build.tcl  program.tcl
06-udp-packet-parser-rgmii/: README.md
06-udp-parser-mii/: README.md
06-udp-parser-mii-v2/: README.md
06-udp-parser-mii-v3/: .gitignore  README.md
06-udp-parser-mii-v3a/: README.md
06-udp-parser-mii-v3b/: BUGS_FOUND.md  FINAL_STATUS.md  README.md  run_test.tcl  simulate.tcl  simulation_results.txt
06-udp-parser-mii-v4/: README.md
06-udp-parser-mii-v5/: .gitignore  README.md  changes.txt
07-itch-parser/: README.md  add_sources.tcl
07-itch-parser-v2/: README.md
07-itch-parser-v3/: README.md
07-itch-parser-v4/: README.md
07-itch-parser-v5/: README.md
08-order-book/: BBO_UART_FORMAT.md  README.md
09-order-gateway-cpp/: CMakeLists.txt  CMakeLists_simplified.txt  CMakePresets.json  CMakeUserPresets.json  README.md  vcpkg.json
10-esp32-ticker/: README.md
11-mobile-app/: 11-mobile-app.csproj  11-mobile-app.sln  App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  GlobalXmlns.cs  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  README.md
12-java-desktop-trading-terminal/: BBO_JAVA_README.md  README.md  pom.xml
13-udp-trasmitter-mii/: README.md  build.tcl
14-order-gateway-cpp/: BENCHMARK_MODE.md  CMakeLists.txt  CMakeUserPresets.json  OPTIMIZATION_CHANGES.md  OPTIMIZATION_RESULTS.md  README.md  cleanup_xsk_map.c  cleanup_xsk_map.sh  profile_performance.sh  run_benchmark.sh  vcpkg.json
14-order-gateway-cpp/db/: itchdb_schema.sql
14-order-gateway-cpp/include/: bbo_parser.h  csv_logger.h  kafka_producer.h  mqtt.h  order_gateway.h  udp_listener.h  xdp_listener.h
14-order-gateway-cpp/include/common/: perf_monitor.h  rt_config.h
14-order-gateway-cpp/src/: bbo_parser.cpp  kafka_producer.cpp  main.cpp  mqtt.cpp  order_gateway.cpp  udp_listener.cpp  xdp_listener.cpp
14-order-gateway-cpp/test/: test_bbo_parser_simple.cpp
14-order-gateway-cpp/xdp/: xdp_prog.c
15-market-maker/: CMakeLists.txt  README.md  config.json  vcpkg-configuration.json
15-market-maker/include/: bbo_parser.h  disruptor_client.h  market_maker_fsm.h  order_producer.h  order_types.h  position_tracker.h  tcp_client.h  udp_listener.h
15-market-maker/include/common/: rt_config.h
15-market-maker/src/: bbo_parser.cpp  main.cpp  market_maker_fsm.cpp  order_producer.cpp  position_tracker.cpp  tcp_client.cpp  udp_listener.cpp
16-order-execution/: CMakeLists.txt  README.md  config.json  vcpkg.json
16-order-execution/include/: fix_decoder.h  fix_encoder.h  simulated_exchange.h
16-order-execution/src/: fix_decoder.cpp  fix_encoder.cpp  order_execution_engine.cpp  simulated_exchange_main.cpp
17-hardware-timestamping/: CMakeLists.txt  README.md  config.json
17-hardware-timestamping/include/: latency_tracker.h  prometheus_exporter.h  timestamp_socket.h
17-hardware-timestamping/src/: latency_tracker.cpp  main.cpp  prometheus_exporter.cpp  timestamp_socket.cpp
18-complete-system/: CMakeLists.txt  README.md
18-complete-system/config/: system_config.json
18-complete-system/include/: metrics_aggregator.h  prometheus_server.h  system_orchestrator.h
18-complete-system/scripts/: start_trading_system.sh  stop_trading_system.sh
18-complete-system/src/: main.cpp  metrics_aggregator.cpp  prometheus_server.cpp  system_orchestrator.cpp
common/: bbo_data.h  order_data.h
docs/: ARTY_A7_COMPLETE_REFERENCE.md  ARTY_A7_ETHERNET_SPECS.md  BUILD_AND_PROGRAM.md  LESSONS_LEARNED.md  PORTFOLIO_SUMMARY.md  PROJECT_16_ARCHITECTURE_PLAN.md  SYSTEM_ARCHITECTURE.md  database.md  lessons-learned.md  performance_benchmark.md  resouirces.md  resources.md
scripts/: build.cmd  create_ila.cmd  create_ila.tcl  itch_live_feed.py  itch_mysql_importer.py  itchdb_to_fpga.py  itchfile_to_db.py  prog.cmd  program.tcl  sim.cmd
tests/: test_byte_counter.vhd
ug901-vivado-synthesis-examples/: asym_ram_sdp_read_wider.vhd  asym_ram_sdp_write_wider.v  asym_ram_sdp_write_wider.vhd  asym_ram_tdp_read_first.vhd  asym_ram_tdp_write_first.v  asym_ram_tdp_write_first.vhd  black_box_1.vhd  bytewrite_ram_1b.v  bytewrite_ram_1b.vhd  bytewrite_tdp_ram_nc.vhd  bytewrite_tdp_ram_rf.vhd  bytewrite_tdp_ram_wf.vhd  cmacc.v  cmult.vhd  concurrent_conditional_assignment.vhd  concurrent_selected_assignment.vhd  convergentRoundingEven.v  convergentRoundingEven.vhd  convergentRoundingOdd.v  dynamic_shift_registers_1.vhd  dynpreaddmultadd.v  dynpreaddmultadd.vhd  filewrite_explicitopen.vhd  filewrite_implicitopen.vhd  for_generate.vhd  for_loop.vhd  fsm_1.vhd  function_package_1.vhd  generics_1.vhd  if_for_generate.vhd  initial_1.vhd  instantiation_recursive.vhd  instantiation_simple.vhd  latches.vhd  macc.vhd  mult_unsigned.v  mult_unsigned.vhd  parameter_1.v  presubmult.vhd  procedure_package_1.vhd  (+34 more)
(+187 files in other folders)
